--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -34,7 +34,6 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.settings.verbosity = \"hint\"\n",
     "ln.settings.transform.stem_uid = \"ManDYgmftZ8C\"\n",
     "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
@@ -185,7 +184,7 @@
     "    # search the public ontology and use the ontology id of the top match\n",
     "    ontology_id = bionty.search(name).iloc[0].ontology_id\n",
     "    # create a record by loading the top match from bionty\n",
-    "    record = bt.CellType.from_public(ontology_id=ontology_id)\n",
+    "    record = bt.CellType.from_source(ontology_id=ontology_id)\n",
     "    name_mapper[name] = record.name  # map the original name to standardized name\n",
     "    record.save()\n",
     "    record.add_synonym(name)"
@@ -291,7 +290,7 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.artifacts[0]],\n",
+    "    [artifact, collection_v1.ordered_artifacts.first()],\n",
     "    is_new_version_of=collection_v1,\n",
     ")\n",
     "collection_v2.save()"
@@ -346,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
