--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -57,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,aws,bionty]'\n",
+    "# !pip install 'lamindb[jupyter,aws,bionty]' \n",
     "!lamin init --storage ./test-scrna --schema bionty"
    ]
   },
@@ -74,7 +74,6 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.settings.verbosity = \"hint\"\n",
     "ln.settings.transform.stem_uid = \"Nv48yAceNSh8\"\n",
     "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
@@ -274,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.artifacts"
+    "collection.ordered_artifacts"
    ]
   },
   {
@@ -310,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
