--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -311,7 +311,7 @@
    "source": [
     "with soma_artifact.open() as soma_store:\n",
     "    obs = soma_store[\"obs\"]\n",
-    "    mas_rna = soma_store[\"ms\"][\"RNA\"]\n",
+    "    ms_rna = soma_store[\"ms\"][\"RNA\"]\n",
     "    \n",
     "    n_obs = len(obs)\n",
     "    n_var = len(ms_rna[\"var\"])\n",
