--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -342,6 +342,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "soma_artifact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with soma_artifact.open(mode=\"w\") as soma_store:\n",
     "    tiledbsoma.io.add_matrix_to_collection(\n",
     "        exp=soma_store,\n",
@@ -350,6 +359,15 @@
     "        matrix_name=\"pca\",\n",
     "        matrix_data=pca_array\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soma_artifact"
    ]
   }
  ],
