--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -328,6 +328,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate PCA from the queried `X`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -346,6 +353,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open the array store in write mode and add PCA. When the store is updated, the corresponding artifact also gets updated with a new version. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -359,6 +373,13 @@
     "        matrix_name=\"pca\",\n",
     "        matrix_data=pca_array\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the artifact has been changed."
    ]
   },
   {
