--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -362,7 +362,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "with soma_artifact.open(mode=\"w\") as soma_store:\n",
