--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -155,6 +155,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curate.add_validated_from_var_index()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
