--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -74,9 +74,8 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.settings.transform.stem_uid = \"Nv48yAceNSh8\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"Nv48yAceNSh80000\"\n",
+    "ln.context.track()"
    ]
   },
   {
