--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -34,9 +34,8 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
-    "ln.settings.transform.stem_uid = \"ManDYgmftZ8C\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"ManDYgmftZ8C0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
