--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -41,9 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"agayZTonayqA\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"agayZTonayqA0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
