--- a/docs/scrna5.ipynb
+++ b/docs/scrna5.ipynb
@@ -43,9 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"Qr1kIHvK506r\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"Qr1kIHvK506r0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
