--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -53,9 +53,8 @@
    },
    "outputs": [],
    "source": [
-    "ln.settings.transform.stem_uid = \"oJN8WmVrxI8m\"\n",
-    "ln.settings.transform.version = \"1\"\n",
-    "ln.track()"
+    "ln.context.uid = \"oJN8WmVrxI8m0000\"\n",
+    "ln.context.track()"
    ]
   },
   {
