fix scrna3 notebook

--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh85zKv\").one()"
+    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh80000\").one()"
    ]
   },
   {
