--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -38,8 +38,7 @@
     "import lamindb as ln\n",
     "import pandas as pd\n",
     "import scanpy as sc\n",
-    "import tiledbsoma\n",
-    "import tiledbsoma.io\n",
+    "from lamindb.core.storage import register_for_tiledbsoma_store, write_tiledbsoma_store\n",
     "from functools import reduce"
    ]
   },
@@ -91,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare a path and a context for a new `tiledbsoma.Experiment`.\n",
+    "Prepare a path for a new `tiledbsoma.Experiment`.\n",
     "\n",
     "We will create our array store at the LaminDB instance root with folder name `\"scrna.tiledbsoma\"`."
    ]
@@ -102,28 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "storage_settings = ln.setup.settings.storage\n",
-    "soma_path = (storage_settings.root / \"scrna.tiledbsoma\").as_posix()  # we could take any AWS S3 path, here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**If our path is on `AWS S3`,** we need to create a context with region information (exception: `us-east-1`). You can find more about `tiledb` configuration parameters in the `tiledb` [documentation](https://docs.tiledb.com/main/how-to/configuration). "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if storage_settings.type == \"s3\":  # if the storage location is on AWS S3\n",
-    "    storage_region = storage_settings.region\n",
-    "    ctx = tiledbsoma.SOMATileDBContext(tiledb_config={\"vfs.s3.region\": storage_region})\n",
-    "else:\n",
-    "    ctx = None"
+    "soma_path = (ln.settings.storage.root / \"scrna.tiledbsoma\").as_posix()  # we could take any AWS S3 path, here"
    ]
   },
   {
@@ -210,7 +188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register all the AnnData objects. Pass `experiment_uri=None` because `tiledbsoma.Experiment` doesn't exist yet:"
+    "Register all the AnnData objects. Pass `store=None` because `tiledbsoma.Experiment` doesn't exist yet:"
    ]
   },
   {
@@ -219,8 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "registration_mapping = tiledbsoma.io.register_anndatas(\n",
-    "    experiment_uri=None,\n",
+    "registration_mapping, adatas = register_for_tiledbsoma_store(\n",
+    "    store=None,\n",
     "    adatas=adatas,\n",
     "    measurement_name=\"RNA\",\n",
     "    obs_field_name=\"obs_id\",\n",
@@ -247,41 +225,13 @@
    "outputs": [],
    "source": [
     "for adata in adatas:\n",
-    "    tiledbsoma.io.from_anndata(\n",
-    "        experiment_uri=soma_path,\n",
+    "    soma_artifact = write_tiledbsoma_store(\n",
+    "        store=soma_path,\n",
     "        anndata=adata,\n",
     "        measurement_name=\"RNA\",\n",
-    "        registration_mapping=registration_mapping,\n",
-    "        context=ctx\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Register the array store"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Register the created `tiledbsoma.Experiment` store in `lamindb`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "soma_artifact = ln.Artifact(soma_path, description=\"My scRNA-seq SOMA Experiment\").save()\n",
-    "soma_artifact.describe()"
+    "        registration_mapping=registration_mapping\n",
+    "    )\n",
+    "    soma_artifact.save()"
    ]
   },
   {
