--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -227,7 +227,7 @@
     "for adata in adatas:\n",
     "    soma_artifact = write_tiledbsoma_store(\n",
     "        store=soma_path,\n",
-    "        anndata=adata,\n",
+    "        adata=adata,\n",
     "        measurement_name=\"RNA\",\n",
     "        registration_mapping=registration_mapping\n",
     "    )\n",
