--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -38,6 +38,7 @@
     "import lamindb as ln\n",
     "import pandas as pd\n",
     "import scanpy as sc\n",
+    "import tiledbsoma.io\n",
     "from lamindb.core.storage import register_for_tiledbsoma_store, write_tiledbsoma_store\n",
     "from functools import reduce"
    ]
