--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -195,7 +195,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "registration_mapping, adatas = register_for_tiledbsoma_store(\n",
