--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ingest the `AnnData` objects sequentially, providing the context. This saves the `AnnData` objects in one array store."
+    "Ingest the `AnnData` objects sequentially. This saves the `AnnData` objects in one array store and creates `Artifact`."
    ]
   },
   {
