expalin artifact updates, wording

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -24,7 +24,7 @@
     "\n",
     ":::{note}\n",
     "\n",
-    "This notebook is based on [the tiledbsoma documentation](https://tiledbsoma.readthedocs.io/en/latest/notebooks/tutorial_soma_append_mode.html).\n",
+    "This notebook shows how `lamindb` can be used with `tiledbsoma` append mode, also expained in [the tiledbsoma documentation](https://tiledbsoma.readthedocs.io/en/latest/notebooks/tutorial_soma_append_mode.html).\n",
     "\n",
     ":::"
    ]
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ingest the `AnnData` objects sequentially. This saves the `AnnData` objects in one array store and creates `Artifact`."
+    "Ingest the `AnnData` objects sequentially. This saves the `AnnData` objects in one array store and creates `Artifact`. Each `write_tiledbsoma_store` call here creates `Artifact` that is a new version of the previous one."
    ]
   },
   {
