--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -483,9 +483,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = bt.Source.filter(\n",
+    "source = bt.Source.get(\n",
     "    name=\"ensembl\", version=\"release-112\", organism=\"human\"\n",
-    ").one()\n",
+    ")\n",
     "public = bt.Gene.public(source=source)\n",
     "public"
    ]
