--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -275,9 +275,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.filter(\n",
+    "collection_v1 = ln.Collection.get(\n",
     "    name=\"My versioned scRNA-seq collection\", version=\"1\"\n",
-    ").one()"
+    ")"
    ]
   },
   {
