--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -60,9 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = ln.Collection.filter(\n",
+    "collection = ln.Collection.get(\n",
     "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
-    ").one()"
+    ")"
    ]
   },
   {
