--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.filter(uid=\"Nv48yAceNSh80000\").one()"
+    "transform = ln.Transform.get(uid=\"Nv48yAceNSh80000\")"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "agayZTonayqA",
