--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -74,9 +74,9 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection.filter(\n",
+    "collection = ln.Collection.get(\n",
     "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
-    ").one()\n",
+    ")\n",
     "collection.describe()"
    ]
   },
