--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -146,6 +146,7 @@
    },
    "outputs": [],
    "source": [
+    "# this runs a while, because this instance is still empty\n",
     "curate.validate()"
    ]
   },
@@ -292,10 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "collection = ln.Collection(\n",
-    "    artifact, name=\"My versioned scRNA-seq collection\", version=\"1\"\n",
-    ")\n",
-    "collection.save()"
+    "collection = ln.Collection(artifact, name=\"My versioned scRNA-seq collection\").save()"
    ]
   },
   {
@@ -335,7 +333,7 @@
    },
    "outputs": [],
    "source": [
-    "collection.artifacts"
+    "collection.artifacts.all()"
    ]
   },
   {
