--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -48,7 +48,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Collection.df()"
@@ -71,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.ordered_artifacts.df()"
+    "collection.artifacts.df()"
    ]
   },
   {
@@ -217,17 +221,8 @@
     "But given the image is part of the notebook, we can also rely on the report that we create when saving the notebook:\n",
     "\n",
     "```\n",
-    "ln.finish()\n",
+    "ln.context.finish()\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To see the current notebook, visit: [lamin.ai/laminlabs/lamindata/transform/mfWKm8OtAzp8z8](https://lamin.ai/laminlabs/lamindata/transform/mfWKm8OtAzp8z8)\n",
-    "\n",
-    "![](https://lamin-site-assets.s3.amazonaws.com/.lamindb/RGXj5wcAf7EAc6J8aBoM.png)"
    ]
   }
  ],
