--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -275,9 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection_v1 = ln.Collection.filter(\n",
-    "    name=\"My versioned scRNA-seq collection\", version=\"1\"\n",
-    ").one()"
+    "collection_v1 = ln.Collection.get(name=\"My versioned scRNA-seq collection\")"
    ]
   },
   {
@@ -298,9 +296,25 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.ordered_artifacts.first()],\n",
-    "    is_new_version_of=collection_v1,\n",
-    ")\n",
+    "[artifact, collection_v1.artifacts.all()[0]],\n",
+    "    revises=collection_v1,\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want, you can label the collection's version by setting `.version`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection_v2.version = \"2\"\n",
     "collection_v2.save()"
    ]
   },
