use save_tiledbsoma_experiment

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -39,7 +39,7 @@
     "import pandas as pd\n",
     "import scanpy as sc\n",
     "import tiledbsoma.io\n",
-    "from lamindb.core.storage import register_for_tiledbsoma_store, write_tiledbsoma_store\n",
+    "from lamindb.integrations import save_tiledbsoma_experiment\n",
     "from functools import reduce"
    ]
   },
@@ -78,31 +78,6 @@
     "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
     ")\n",
     "collection.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prepare the array store"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Prepare a path for a new `tiledbsoma.Experiment`.\n",
-    "\n",
-    "We will create our array store at the LaminDB instance root with folder name `\"scrna.tiledbsoma\"`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soma_path = (ln.settings.storage.root / \"scrna.tiledbsoma\").as_posix()  # we could take any AWS S3 path, here"
    ]
   },
   {
@@ -189,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register all the AnnData objects. Pass `store=None` because `tiledbsoma.Experiment` doesn't exist yet:"
+    "Ingest the `AnnData` objects. This saves the `AnnData` objects in one array store, creates `Artifact` and saves it. This function also writes current `run.uid` to `tiledbsoma.Experiment` `obs`, under `lamin_run_uid`."
    ]
   },
   {
@@ -202,41 +177,14 @@
    },
    "outputs": [],
    "source": [
-    "registration_mapping, adatas = register_for_tiledbsoma_store(\n",
-    "    store=None,\n",
-    "    adatas=adatas,\n",
+    "soma_artifact = save_tiledbsoma_experiment(\n",
+    "    adatas,\n",
     "    measurement_name=\"RNA\",\n",
-    "    obs_field_name=\"obs_id\",\n",
-    "    var_field_name=\"var_id\",\n",
-    "    append_obsm_varm=True\n",
+    "    obs_id_name=\"obs_id\",\n",
+    "    var_id_name=\"var_id\"\n",
+    "    append_obsm_varm=True,\n",
+    "    artifact_kwargs={\"description\": \"tiledbsoma experiment\"}\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ingest the `AnnData` objects sequentially. This saves the `AnnData` objects in one array store and creates `Artifact`. Each `write_tiledbsoma_store` call here creates `Artifact` that is a new version of the previous one."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "for adata in adatas:\n",
-    "    soma_artifact = write_tiledbsoma_store(\n",
-    "        store=soma_path,\n",
-    "        adata=adata,\n",
-    "        measurement_name=\"RNA\",\n",
-    "        registration_mapping=registration_mapping\n",
-    "    )\n",
-    "    soma_artifact.save()"
    ]
   },
   {
