--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -181,7 +181,7 @@
     "    adatas,\n",
     "    measurement_name=\"RNA\",\n",
     "    obs_id_name=\"obs_id\",\n",
-    "    var_id_name=\"var_id\"\n",
+    "    var_id_name=\"var_id\",\n",
     "    append_obsm_varm=True,\n",
     "    artifact_kwargs={\"description\": \"tiledbsoma experiment\"}\n",
     ")"
