Call ln.integrations.save_tiledbsoma_experiment

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -39,7 +39,6 @@
     "import pandas as pd\n",
     "import scanpy as sc\n",
     "import tiledbsoma.io\n",
-    "from lamindb.integrations import save_tiledbsoma_experiment\n",
     "from functools import reduce"
    ]
   },
@@ -177,7 +176,7 @@
    },
    "outputs": [],
    "source": [
-    "soma_artifact = save_tiledbsoma_experiment(\n",
+    "soma_artifact = ln.integrations.save_tiledbsoma_experiment(\n",
     "    adatas,\n",
     "    measurement_name=\"RNA\",\n",
     "    obs_id_name=\"obs_id\",\n",
