Signature change of save_tiledbsoma_experiment

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -178,11 +178,11 @@
    "source": [
     "soma_artifact = ln.integrations.save_tiledbsoma_experiment(\n",
     "    adatas,\n",
+    "    description=\"tiledbsoma experiment\"\n",
     "    measurement_name=\"RNA\",\n",
     "    obs_id_name=\"obs_id\",\n",
     "    var_id_name=\"var_id\",\n",
-    "    append_obsm_varm=True,\n",
-    "    artifact_kwargs={\"description\": \"tiledbsoma experiment\"}\n",
+    "    append_obsm_varm=True\n",
     ")"
    ]
   },
