--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -178,7 +178,7 @@
    "source": [
     "soma_artifact = ln.integrations.save_tiledbsoma_experiment(\n",
     "    adatas,\n",
-    "    description=\"tiledbsoma experiment\"\n",
+    "    description=\"tiledbsoma experiment\",\n",
     "    measurement_name=\"RNA\",\n",
     "    obs_id_name=\"obs_id\",\n",
     "    var_id_name=\"var_id\",\n",
