--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -251,6 +251,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "adata.obs_names_make_unique()\n",
+    "adata.var_names_make_unique()\n",
+    "\n",
     "adata.obs[\"obs_id\"] = adata.obs.index\n",
     "adata.var[\"var_id\"] = adata.var.index\n",
     "\n",
@@ -315,6 +318,7 @@
    "outputs": [],
    "source": [
     "with soma_artifact.open() as soma_store: # mode=\"r\" by default\n",
+    "    ms_rna = soma_store[\"ms\"][\"RNA\"]\n",
     "    n_obs = len(soma_store[\"obs\"])\n",
     "    n_var = len(ms_rna[\"var\"])\n",
     "    X = ms_rna[\"X\"][\"data\"].read().coos((n_obs, n_var)).concat().to_scipy()"
