prettify and more text

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -279,13 +279,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Append `AnnData`."
+    "Append the `AnnData` object from disk. This also creates a new version of `soma_artifact`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "soma_artifact = ln.integrations.save_tiledbsoma_experiment(\n",
