--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -123,7 +123,7 @@
    },
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(\n",
+    "curate = ln.Curator.from_anndata(\n",
     "    adata, \n",
     "    var_index=bt.Gene.ensembl_gene_id, \n",
     "    categoricals={\n",
