--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(adata, var_index=bt.Gene.symbol, categoricals={adata.obs.cell_type.name: bt.CellType.name})"
+    "curate = ln.Curator.from_anndata(adata, var_index=bt.Gene.symbol, categoricals={adata.obs.cell_type.name: bt.CellType.name})"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curate = ln.Curate.from_anndata(adata_validated, var_index=bt.Gene.ensembl_gene_id, categoricals={\"cell_type\": bt.CellType.name})"
+    "curate = ln.Curator.from_anndata(adata_validated, var_index=bt.Gene.ensembl_gene_id, categoricals={\"cell_type\": bt.CellType.name})"
    ]
   },
   {
