📝 Append `AnnData` to `tilledbsoma` store in scrna6 (#149)

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare the `AnnData` objects for concatenation. Prepare id fields, sanitize `index` names, intersect columns, drop slots. Here we have to drop `.obsp`, `.uns` and also columns from the dataframes that are not in the intersections obtained above, otherwise the ingestion will fail. We will need to provide `obs` and `var` names in `tiledbsoma.io.register_anndatas`, so we create these fileds (`obs_id`, `var_id`) from the dataframe indices."
+    "Prepare the `AnnData` objects for concatenation. Prepare id fields, sanitize `index` names, intersect columns, drop slots. Here we have to drop `.obsp`, `.uns` and also columns from the dataframes that are not in the intersections obtained above, otherwise the ingestion will fail. We will need to provide `obs` and `var` names in `ln.integrations.save_tiledbsoma_experiment`, so we create these fileds (`obs_id`, `var_id`) from the dataframe indices."
    ]
   },
   {
@@ -163,7 +163,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ingest the `AnnData` objects. This saves the `AnnData` objects in one array store, creates `Artifact` and saves it. This function also writes current `run.uid` to `tiledbsoma.Experiment` `obs`, under `lamin_run_uid`."
+    "Ingest the `AnnData` objects. This saves the `AnnData` objects in one array store, creates `Artifact` and saves it. This function also writes current `run.uid` to `tiledbsoma.Experiment` `obs`, under `lamin_run_uid`. \n",
+    "\n",
+    "If you know `tiledbsoma` API, then note, that `ln.integrations.save_tiledbsoma_experiment` includes both `tiledbsoma.io.register_anndatas` and `tiledbsoma.io.from_anndata`."
    ]
   },
   {
@@ -197,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Open and query the experiment. We can use the registered `Artifact`. We query `X` and `obs` from the array store."
+    "Open and query the experiment. We can use the registered `Artifact`. Here we query `obs` from the array store."
    ]
   },
   {
@@ -212,13 +214,93 @@
    "source": [
     "with soma_artifact.open() as soma_store:\n",
     "    obs = soma_store[\"obs\"]\n",
-    "    ms_rna = soma_store[\"ms\"][\"RNA\"]\n",
+    "    var = soma_store[\"ms\"][\"RNA\"][\"var\"]\n",
     "    \n",
-    "    n_obs = len(obs)\n",
-    "    n_var = len(ms_rna[\"var\"])\n",
-    "    X = ms_rna[\"X\"][\"data\"].read().coos((n_obs, n_var)).concat().to_scipy()\n",
+    "    obs_columns_store = obs.schema.names\n",
+    "    var_columns_store = var.schema.names\n",
     "    \n",
-    "    print(obs.read().concat().to_pandas())"
+    "    obs_store_df = obs.read().concat().to_pandas()\n",
+    "    \n",
+    "    print(obs_store_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Append `AnnData` to the array store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prepare a new `AnnData` object to be appended to the store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = ln.core.datasets.anndata_with_obs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.obs_names_make_unique()\n",
+    "adata.var_names_make_unique()\n",
+    "\n",
+    "adata.obs[\"obs_id\"] = adata.obs.index\n",
+    "adata.var[\"var_id\"] = adata.var.index\n",
+    "\n",
+    "adata.obs[\"dataset\"] = obs_store_df[\"dataset\"].max()\n",
+    "\n",
+    "obs_columns_same = [obs_col for obs_col in adata.obs.columns if obs_col in obs_columns_store]\n",
+    "adata.obs = adata.obs[obs_columns_same]\n",
+    "\n",
+    "var_columns_same = [var_col for var_col in adata.var.columns if var_col in var_columns_store]\n",
+    "adata.var = adata.var[var_columns_same]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.write_h5ad(\"adata_to_append.h5ad\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Append the `AnnData` object from disk. This also creates a new version of `soma_artifact`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "soma_artifact = ln.integrations.save_tiledbsoma_experiment(\n",
+    "    [\"adata_to_append.h5ad\"],\n",
+    "    revises=soma_artifact,\n",
+    "    measurement_name=\"RNA\",\n",
+    "    obs_id_name=\"obs_id\",\n",
+    "    var_id_name=\"var_id\"\n",
+    ")"
    ]
   },
   {
@@ -226,6 +308,26 @@
    "metadata": {},
    "source": [
     "## Update the array store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read `X` from the store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with soma_artifact.open() as soma_store: # mode=\"r\" by default\n",
+    "    ms_rna = soma_store[\"ms\"][\"RNA\"]\n",
+    "    n_obs = len(soma_store[\"obs\"])\n",
+    "    n_var = len(ms_rna[\"var\"])\n",
+    "    X = ms_rna[\"X\"][\"data\"].read().coos((n_obs, n_var)).concat().to_scipy()"
    ]
   },
   {
