--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -171,7 +171,7 @@
     "\n",
     "Provenance is tracked by writing the current `run.uid` to `tiledbsoma.Experiment.obs` as `lamin_run_uid`.\n",
     "\n",
-    "If you know `tiledbsoma` API, then note, that {func}`~docs:lamindb.integrations.save_tiledbsoma_experiment` includes both `tiledbsoma.io.register_anndatas` and `tiledbsoma.io.from_anndata`.\n",
+    "If you know `tiledbsoma` API, then note that {func}`~docs:lamindb.integrations.save_tiledbsoma_experiment` abstracts over both `tiledbsoma.io.register_anndatas` and `tiledbsoma.io.from_anndata`.\n",
     "\n",
     ":::"
    ]
@@ -209,7 +209,7 @@
     "    \n",
     "    obs_store_df = obs.read().concat().to_pandas()\n",
     "    \n",
-    "    print(obs_store_df)"
+    "    display(obs_store_df)"
    ]
   },
   {
@@ -339,16 +339,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tracking array store mutations"
+    "## See array store mutations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "During the append-to and update operations, the array store was changed.\n",
-    "\n",
-    "LaminDB automatically tracks versions and provenance during these mutations."
+    "During the append-to and update operations, the data in the array store was changed. LaminDB automatically tracks these revisions recording the number of objects, hashes, and provenance."
    ]
   },
   {
