Track all anndatas in scrna-tiledbsoma

--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -234,6 +234,15 @@
    "source": [
     "adata = ln.core.datasets.anndata_with_obs()\n",
     "\n",
+    "ln.Artifact(adata).save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "adata.obs_names_make_unique()\n",
     "adata.var_names_make_unique()\n",
     "\n",
@@ -356,6 +365,29 @@
    "outputs": [],
    "source": [
     "soma_artifact.versions.df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## View lineage of th array store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the generating flow of the array store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soma_artifact.view_lineage()"
    ]
   },
   {
