--- a/docs/scrna-tiledbsoma.ipynb
+++ b/docs/scrna-tiledbsoma.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "adata = ln.core.datasets.anndata_with_obs()\n",
     "\n",
-    "ln.Artifact(adata).save()"
+    "ln.Artifact(adata, description=\"anndata to append\").save()"
    ]
   },
   {
